# paperpowers

./: .gitignore  .gitmodules  INSTALL.md  LICENSE  README.en.md  README.md  TEST_PROMPTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/paperpowers/templates/: claim-evidence-map.template.md  current-paper-state.template.md
integrations/mineru-cloud/: .env.example  README.en.md  README.md  mcp.uvx.example.json
integrations/mineru-cloud/source/: README.md
mcp/: README.md
mcp/mineru-cloud/: README.md  pyproject.toml
mcp/zotero/: README.md  pyproject.toml  server.py
references/: academic-personas.md  advisor-cycle.md  claim-evidence-map.md  evidence-rules.md  experiment-checklist.md  figure-patterns.md  pdf-ingestion-with-mineru.md  project-memory.md  reference-pipeline.md  review-rubric.md  venue-expectations.md
skills/academic-expert/: SKILL.md
skills/academic-expert/agents/: openai.yaml
skills/claim-evidence-map/: SKILL.md
skills/claim-evidence-map/agents/: openai.yaml
skills/experiment-design/: SKILL.md
skills/experiment-design/agents/: openai.yaml
skills/figure-planning/: SKILL.md
skills/figure-planning/agents/: openai.yaml
skills/idea-brainstorming/: SKILL.md
skills/interactive-section-writing/: SKILL.md
skills/literature-mapping/: SKILL.md
skills/novelty-stress-test/: SKILL.md
skills/paper-review/: SKILL.md
skills/paper-triage/: SKILL.md
skills/project-memory/: SKILL.md
skills/related-work-writing/: SKILL.md
skills/revision-loop/: SKILL.md
(+10 files in other folders)
