[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-mineru-bach"
version = "0.1.5"
description = "A MCP server for MinerU document analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "bachstudio", email = "bachstudio@example.com" }
]
dependencies = [
  "mcp[cli]",
  "requests",
]
